--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
 - degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
-  # awards:
-  # summary:
+  uni: freeCodeCamp
+  year: June, 2018 &mdash; January, 2019
+  # awards: Certificate of completion
+  # summary: Best course online
